--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "sass": "^1.29.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.12"
+  },
+  "dependencies": {
+    "clipboard": "^2.0.6"
   }
 }
